stream commit