@@ -30,23 +30,23 @@ public class FileSample {
         }
     }
 
-    public static void delete(String location) {
-        Path path = Path.of(location);
-        try{
-            Files.delete(path);
-        }
-        catch (IOException exception){
-            System.err.println(exception.getMessage());
-        }
-    }
-
-    public static void deleteFile(String location, String fileName) {
-        Path path = Paths.get(location, fileName);
-        try {
-            Files.delete(path);
-        }
-        catch (IOException exception){
-            System.err.println(exception.getMessage());
-        }
-    }
+//    public static void delete(String location) {
+//        Path path = Path.of(location);
+//        try{
+//            Files.delete(path);
+//        }
+//        catch (IOException exception){
+//            System.err.println(exception.getMessage());
+//        }
+//    }
+//
+//    public static void deleteFile(String location, String fileName) {
+//        Path path = Paths.get(location, fileName);
+//        try {
+//            Files.delete(path);
+//        }
+//        catch (IOException exception){
+//            System.err.println(exception.getMessage());
+//        }
+//    }
 }
